<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

<!-- Container layout -->
  <RelativeLayout android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:id="@+id/relativeLayout1">

    <ScrollView
      android:id="@+id/scrollView1"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">

      <RelativeLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:id="@+id/relativeLayout2">

        <!-- Header -->
        <RelativeLayout
          android:id="@+id/header"
          android:layout_width="fill_parent"
          android:layout_centerHorizontal="false"
          android:background="#000000"
          android:layout_alignParentTop="true"
          android:layout_height="125dip">
          <ImageView
            android:id="@+id/osu_tag"
            android:src="@drawable/osu_tag"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="OSU Icon"
            android:paddingTop="2dp"
            android:paddingLeft="20dp" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/dashboard_label"
            android:textSize="35dip"
            android:textColor="#c34500"
            android:paddingTop="40dip"
            android:paddingLeft="160dip"
            android:textStyle="bold" />
        </RelativeLayout>

    <!-- Main Body -->

    <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#3b3b3b"
                android:orientation="vertical"
                android:layout_below="@+id/header"
                android:layout_alignParentBottom = "true"
                android:padding="10dip" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_warning"
        android:gravity="center"
        android:textSize="40dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_text"
        android:gravity="center"
        android:paddingBottom="20dip"
        android:textSize="20dip" />

    <ToggleButton
        android:id="@+id/toggle_device_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enable_device_admin"
        android:textOff="@string/device_admin_disabled"
        android:textOn="@string/device_admin_enabled" />

    <ImageButton
        android:id="@+id/button_reset_device"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/button"
        android:background="#3b3b3b"
        android:onClick="onClick" />

         </LinearLayout>
      </RelativeLayout>
    </ScrollView>
  </RelativeLayout>
</LinearLayout>
